// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatelessColorPicker Dialog ColorPicker should always render 1`] = `
<ColorPicker
  color="#000000"
  header="Color Picker"
  onAccept={[MockFunction]}
  onCancel={[MockFunction]}
  onChangeComplete={[MockFunction]}
  styles={Object {}}
/>
`;

exports[`StatelessColorPicker Dialog should always render 1`] = `
<WithStyles(ForwardRef(Dialog))
  onBackdropClick={[MockFunction]}
  onEscapeKeyDown={[MockFunction]}
  open={false}
>
  <ColorPicker
    color="#000000"
    header="Color Picker"
    onAccept={[MockFunction]}
    onCancel={[MockFunction]}
    onChangeComplete={[MockFunction]}
    styles={Object {}}
  />
</WithStyles(ForwardRef(Dialog))>
`;

exports[`StatelessColorPicker Table TableBody should always render 1`] = `
<WithStyles(ForwardRef(TableBody))>
  <WithStyles(ForwardRef(TableRow))
    hover={true}
    key="1"
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(TableCell))>
      test
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))>
      <span
        className="colorPreview"
        style={
          Object {
            "background": "#000000",
          }
        }
      />
      #000000
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/android"
        title="android"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="android"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/iphone"
        title="iphone"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="iphone"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/psp"
        title="psp"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="psp"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/xbox"
        title="xbox"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="xbox"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/pc-steam"
        title="pc-steam"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="pc-steam"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/wii-u"
        title="wii-u"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="wii-u"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/wii"
        title="wii"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="wii"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/pc-bnet"
        title="pc-bnet"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="pc-bnet"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="test/default"
        title="default"
      >
        <span>
          <PlatformIcon
            className=""
            color="#000000"
            platform="default"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
  <WithStyles(ForwardRef(TableRow))
    hover={true}
    key="3"
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(TableCell))>
      target
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))>
      <span
        className="colorPreview"
        style={
          Object {
            "background": "#FFFFFF",
          }
        }
      />
      #FFFFFF
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/android"
        title="android"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="android"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/iphone"
        title="iphone"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="iphone"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/psp"
        title="psp"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="psp"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/xbox"
        title="xbox"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="xbox"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/pc-steam"
        title="pc-steam"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="pc-steam"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/wii-u"
        title="wii-u"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="wii-u"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/wii"
        title="wii"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="wii"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/pc-bnet"
        title="pc-bnet"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="pc-bnet"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        key="target/default"
        title="default"
      >
        <span>
          <PlatformIcon
            className=""
            color="#FFFFFF"
            platform="default"
            size={24}
          />
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
</WithStyles(ForwardRef(TableBody))>
`;

exports[`StatelessColorPicker Table TableHead should always render 1`] = `
<WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableCell))>
      Project Stage
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))>
      Color
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell))>
      Icons
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
</WithStyles(ForwardRef(TableHead))>
`;

exports[`StatelessColorPicker Table should always render 1`] = `
<WithStyles(ForwardRef(Table))>
  <WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableCell))>
        Project Stage
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        Color
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        Icons
      </WithStyles(ForwardRef(TableCell))>
    </WithStyles(ForwardRef(TableRow))>
  </WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableBody))>
    <WithStyles(ForwardRef(TableRow))
      hover={true}
      key="1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(TableCell))>
        test
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        <span
          className="colorPreview"
          style={
            Object {
              "background": "#000000",
            }
          }
        />
        #000000
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/android"
          title="android"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="android"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/iphone"
          title="iphone"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="iphone"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/psp"
          title="psp"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="psp"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/xbox"
          title="xbox"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="xbox"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/pc-steam"
          title="pc-steam"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="pc-steam"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/wii-u"
          title="wii-u"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="wii-u"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/wii"
          title="wii"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="wii"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/pc-bnet"
          title="pc-bnet"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="pc-bnet"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="test/default"
          title="default"
        >
          <span>
            <PlatformIcon
              className=""
              color="#000000"
              platform="default"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
      </WithStyles(ForwardRef(TableCell))>
    </WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableRow))
      hover={true}
      key="3"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(TableCell))>
        target
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        <span
          className="colorPreview"
          style={
            Object {
              "background": "#FFFFFF",
            }
          }
        />
        #FFFFFF
      </WithStyles(ForwardRef(TableCell))>
      <WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/android"
          title="android"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="android"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/iphone"
          title="iphone"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="iphone"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/psp"
          title="psp"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="psp"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/xbox"
          title="xbox"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="xbox"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/pc-steam"
          title="pc-steam"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="pc-steam"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/wii-u"
          title="wii-u"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="wii-u"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/wii"
          title="wii"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="wii"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/pc-bnet"
          title="pc-bnet"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="pc-bnet"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
        <WithStyles(ForwardRef(Tooltip))
          key="target/default"
          title="default"
        >
          <span>
            <PlatformIcon
              className=""
              color="#FFFFFF"
              platform="default"
              size={24}
            />
          </span>
        </WithStyles(ForwardRef(Tooltip))>
      </WithStyles(ForwardRef(TableCell))>
    </WithStyles(ForwardRef(TableRow))>
  </WithStyles(ForwardRef(TableBody))>
</WithStyles(ForwardRef(Table))>
`;

exports[`StatelessColorPicker renders correctly 1`] = `
<div
  className="ColorSettingsContainer"
>
  <WithStyles(ForwardRef(Table))>
    <WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableCell))>
          Project Stage
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          Color
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          Icons
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))>
      <WithStyles(ForwardRef(TableRow))
        hover={true}
        key="1"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(TableCell))>
          test
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <span
            className="colorPreview"
            style={
              Object {
                "background": "#000000",
              }
            }
          />
          #000000
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/android"
            title="android"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="android"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/iphone"
            title="iphone"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="iphone"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/psp"
            title="psp"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="psp"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/xbox"
            title="xbox"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="xbox"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/pc-steam"
            title="pc-steam"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="pc-steam"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/wii-u"
            title="wii-u"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="wii-u"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/wii"
            title="wii"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="wii"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/pc-bnet"
            title="pc-bnet"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="pc-bnet"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="test/default"
            title="default"
          >
            <span>
              <PlatformIcon
                className=""
                color="#000000"
                platform="default"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        hover={true}
        key="3"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(TableCell))>
          target
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <span
            className="colorPreview"
            style={
              Object {
                "background": "#FFFFFF",
              }
            }
          />
          #FFFFFF
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/android"
            title="android"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="android"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/iphone"
            title="iphone"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="iphone"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/psp"
            title="psp"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="psp"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/xbox"
            title="xbox"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="xbox"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/pc-steam"
            title="pc-steam"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="pc-steam"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/wii-u"
            title="wii-u"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="wii-u"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/wii"
            title="wii"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="wii"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/pc-bnet"
            title="pc-bnet"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="pc-bnet"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
          <WithStyles(ForwardRef(Tooltip))
            key="target/default"
            title="default"
          >
            <span>
              <PlatformIcon
                className=""
                color="#FFFFFF"
                platform="default"
                size={24}
              />
            </span>
          </WithStyles(ForwardRef(Tooltip))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
  <WithStyles(ForwardRef(Dialog))
    onBackdropClick={[MockFunction]}
    onEscapeKeyDown={[MockFunction]}
    open={false}
  >
    <ColorPicker
      color="#000000"
      header="Color Picker"
      onAccept={[MockFunction]}
      onCancel={[MockFunction]}
      onChangeComplete={[MockFunction]}
      styles={Object {}}
    />
  </WithStyles(ForwardRef(Dialog))>
</div>
`;
